# UWB-GCSDD-2025

./: CMakeLists.txt  Makefile  README.md
src/: main.cpp
